--- a/src/project/client.css
+++ b/src/project/client.css
@@ -29,14 +29,21 @@
     width: 128px;
     height: 128px;
     overflow: hidden;
-    background-image: url(http://www.1000zhu.com/images/words.png);
     background-size: 388%;
     background-position: 0px -619px;
     transition: width 2s;
 }
 .cli_li>div:nth-of-type(1):hover{
-    background-image: none ;
-    
+    background-image: url(http://www.1000zhu.com/images/words.png);
+    animation:dds 1s;
+    animation-fill-mode:forwards;
+}
+@keyframes dds
+{
+	0% {opacity: 0.7;}
+    30% {opacity: 0.4;}
+    70% {opacity: 0.8;}
+    100% {opacity: 1;}
 }
 .cli_li>div>div{
     display: inline-block;
@@ -70,6 +77,13 @@
 .cli_top{
     font-size: 24px;
     text-align: center;
+    animation:bbt 2s;
+    animation-fill-mode:forwards;
+}
+@keyframes bbt
+{
+	from {opacity: 0;}
+	to {opacity: 1;}
 }
 @media screen and (max-height:500px) {
     .cli_top{
@@ -93,4 +107,14 @@
     width: 120px;
     height: 120px;
     position: absolute;
+}
+.cli_font{
+    overflow: hidden;
+    animation:fontli 1.5s;
+    animation-fill-mode:forwards;
+}
+@keyframes fontli
+{
+	from {margin-top: 170%;}
+	to {margin-top: 20px;}
 }
