--- a/src/project/client.css
+++ b/src/project/client.css
@@ -10,6 +10,7 @@
     /* background-size: 140%; */
     background-position:45% 50%;
     display: flex;
+    user-select:none;
 }
 .addji{
     height: 300px;
@@ -40,9 +41,9 @@
 }
 @keyframes dds
 {
-	0% {opacity: 0.7;}
-    30% {opacity: 0.4;}
-    70% {opacity: 0.8;}
+	0% {opacity: 0.9;}
+    30% {opacity: 0.8;}
+    70% {opacity: 0.4;}
     100% {opacity: 1;}
 }
 .cli_li>div>div{
