--- a/src/project/read/qzleft.css
+++ b/src/project/read/qzleft.css
@@ -114,24 +114,7 @@ u{
     transition: all .3s ease-in-out 0s;
     overflow: hidden;
 }
-.el-table__body-wrapper{
-    margin-top: -50px;
-}
-.el-table--enable-row-transition .el-table__body td{
-    background:#eff2f4;
-}
-.cell{
-    position: relative;
-    top: 0px;
-    left: 180px;
-    margin: 0px 60px;
-    margin-top: -40px;
-    padding: 0px;
-    background:#eff2f4;
-    list-style: none;
-    line-height: 32px !important;
-}
-.bodyul{
+.qzbody>ul{
     position: relative;
     top: 0px;
     left: 240px;
@@ -140,17 +123,12 @@ u{
     padding: 0px;
     list-style: none;
 }
-.bodyli:nth-of-type(1){
-    margin-top: 70px;
-
-}
-.bodyli{
-    margin-left: 60px;
+.qzbody>ul>li{
     margin-bottom: 50px;
     height: 166px;
     width: 100%;
 }
-.bodyli>p:nth-of-type(1)>span{
+.qzbody>ul>li>p:nth-of-type(1)>span{
     display: block;
     float: left;
     width: 58px;
@@ -161,18 +139,18 @@ u{
     text-align: center;
     background: url(http://www.1000zhu.com/images/icons.png) no-repeat 0px -512px;
 }
-.bodyli>p:nth-of-type(1)>span>u{
+.qzbody>ul>li>p:nth-of-type(1)>span>u{
     display: block;
     margin-top: -5px;
     font-size: 16px;
     text-decoration: none;
 }
-.bodyli>p:nth-of-type(1){
+.qzbody>ul>li>p:nth-of-type(1){
     float: left;
     display: block;
     padding-right: 30px;
 }
-.bodyli>p:nth-of-type(1)>img{
+.qzbody>ul>li>p:nth-of-type(1)>img{
     display: block;
     float: left;
     margin-left: 12px;
@@ -181,7 +159,7 @@ u{
     background: White;
     cursor: pointer;
 }
-.bodyli>p:nth-of-type(2){
+.qzbody>ul>li>p:nth-of-type(2){
     display: block;
     float: left;
     transition: all .3s ease-in-out 0s;
@@ -295,11 +273,10 @@ body{
 }
 .el-pagination{
     position: relative;
-    top: -13px;
+    top: 20px;
     left: 240px;
+    margin: 0px 60px;
     height: 80px;
-    padding:30px 65px !important;
-    background-color: #eff2f4;
 }
 .el-pagination.is-background .el-pager li:not(.disabled).active{
     background-color: #2cc0a7 !important;
