--- a/src/project/error/error.css
+++ b/src/project/error/error.css
@@ -1,5 +1,5 @@
 body {
-    background:#222;
+    /* background:#222; */
     margin:0;
     font-family:Arial, Helvetica, sans-serif;
     font-size:12px;
